Design/폰트 스타일링적용

--- a/src/components/post/write/StyledEditorQuill.css
+++ b/src/components/post/write/StyledEditorQuill.css
@@ -25,5 +25,12 @@
 }
 
 .ql-editor {
-  font-family: 'Pretendard-Regular', serif;
+  color: var(--font-black, var(--Black, #242424));
+
+  /* body-large */
+  font-family: Pretendard;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
 }
